Fix the alignment and margins

--- a/styles/table-of-contents.module.css
+++ b/styles/table-of-contents.module.css
@@ -410,8 +410,8 @@
 .entryList {
   list-style: none;
   padding-top: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
   margin: 0;
 }
 
